--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,7 @@ Features include (and more planned):
 * List pods in namespace and/or node.
 * See pod logs.
 * Describe pods.
+* Execute command in a pod.
 * Option for single executable, for easy installation.
 * Colors, if terminal supports them.
 
