--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,6 +1,7 @@
 == 0.8
 
-- Removed extra print-statement when deleting pod.
+* Removed extra print-statement when deleting pod.
+* Added labels-command to show labels of selected pod.
 
 == 0.7
 
