--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,3 +1,7 @@
+== 0.9
+
+* Cursor line in pods-windows is now remembered when refreshing pods.
+
 == 0.8
 
 * Removed extra print-statement when deleting pod.
