--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,7 +1,10 @@
+== 0.12
+
+* Pod status is now yellow if not all containers are running.
+
 == 0.11
 
 * Added clip-command to copy Output-window contents to clipboard.
-
 
 == 0.10
 
