--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,6 +1,8 @@
 == 0.13
 
 * Added ku-command to execute kubectl in selected namespace.
+* Added secret-command to get and view secrets.
+* Added cm-command to get and view configmaps.
 
 == 0.12
 
