--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,3 +1,7 @@
+== 0.18
+
+- When using OpenShift, if namespaces fails, then use projects.
+- Added wrap-command and shift-g shortcut to toggle wrapping in Output-window.
 == 0.17
 
 - Bug fix when using workers-command.
