--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,3 +1,8 @@
+== 0.30
+
+- Find kubeconfig-files at the start of the program.
+- Added keyboard shortcuts to view and select kubeconfig.
+
 == 0.29
 
 - Bug fix when decoding secret/configmap values and certificates.
